labs/ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginxapp-blue-service
  labels:
    name: webservice-blue
spec:
  selector:
    app: web
    version: blue
  ports:
    - targetPort: 5000
      port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginxapp-green-service
  labels:
    name: webservice-green
spec:
  selector:
    app: web
    version: green
  ports:
    - targetPort: 5000
      port: 80
